--- a/src/app/components/libros/listar-libros/listar-libros.component.html
+++ b/src/app/components/libros/listar-libros/listar-libros.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-bordered" width="100%" cellspacing="0">
+                <table *ngIf="listarLibros.length>0" class="table table-bordered" width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>ISBN</th>
@@ -21,13 +21,18 @@
                     </thead>
 
                     <tbody>
-
-
-                        
-
+                        <tr *ngFor="let libro of listarLibros">
+                            <td>{{libro.isbn}}</td>
+                            <td>{{libro.titulo}}</td>
+                            <td>{{libro.autor}}</td>
+                            <td>{{libro.editorial}}</td>
+                            <td>{{libro.fechaPublicacion}}</td>
+                        </tr>
                     </tbody>
                 </table>
-
+                <div *ngIf="listarLibros.length == 0" class="row mt-5">
+                    <h3>No hay libros registrados</h3>
+                </div>
             </div>
         </div>
         <div class="card-footer">
