--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -41,7 +41,7 @@
                                         <div class="form-group">
                                             <div class="text-center">
                                                 <button type="submit" class="btn btn-primary "
-                                                    [disabled]="login.invalid" >Login</button>
+                                                    [disabled]="login.invalid" routerLink="/mostrarLibros">Login</button>
                                             </div>
                                         </div>
                                         <hr>
