--- a/src/app/components/usuarios/listar-usuarios/listar-usuarios.component.html
+++ b/src/app/components/usuarios/listar-usuarios/listar-usuarios.component.html
@@ -4,31 +4,40 @@
 <div class="container p-4">
     <div class="card text-center">
         <div class="card-header">
-            <h3 class="card-title text-uppercase">Listado De Libros Registrados</h3>
+            <h3 class="card-title text-uppercase">Listado De Usuarios Registrados</h3>
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-bordered" width="100%" cellspacing="0">
+                <table *ngIf="listarUsuarios.length>0" class="table table-bordered" width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>IDENTIFICACIÓN</th>
                             <th>NOMBRES</th>
                             <th>APELLIDOS</th>
-                            <th>EDITORIAL</th>
                             <th>CELULAR</th>
+                            <th>PASSWORD</th>
                             <th>CORREO</th>
                             <th>ACCIONES</th>
                         </tr>
                     </thead>
 
                     <tbody>
-
+                        <tr *ngFor="let usuario of listarUsuarios">
+                            <td>{{usuario.identificacion}}</td>
+                            <td>{{usuario.nombres}}</td>
+                            <td>{{usuario.apellidos}}</td>
+                            <td>{{usuario.celular}}</td>
+                            <td>{{usuario.password}}</td>
+                            <td>{{usuario.correo}}</td>
+                        </tr>
 
                         
 
                     </tbody>
                 </table>
-
+                <div *ngIf="listarUsuarios.length == 0" class="row mt-5">
+                    <h3>No hay Usuarios registrados</h3>
+                </div>
             </div>
         </div>
         <div class="card-footer">
