--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,6 +31,9 @@
           <a class="nav-link" routerLink="/listarUsuarios">Mostrar Usuarios</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/listarPrestamos">Mostrar Prestamos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" data-toggle="modal" data-target="#logout" href="#">SALIR</a>
         </li>
       </ul>
